--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,5 @@
 .container{
     display: flex;
-    justify-content: center;
-}
-
-.subbar{
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
