mise en forme du mail

--- a/templates/fail.html
+++ b/templates/fail.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <H5>The email couldn't been send please retry on the main page</H5>
-        <a href="/templates/home.html"><button>home</button></a>
+        <H5>sorry something went wrong, the email couldn't been send please retry on the main page</H5>
+        <a href="/"><button>home</button></a>
     </div>    
 </body>
 
