--- a/templates/home.html
+++ b/templates/home.html
@@ -16,8 +16,8 @@
         </H2>
         <div class="subbar">
             <form action="/submit" method="POST">
-                <input placeholder="email" name="email" type="text">
-                <button type="submit">Envoyer</button>
+                <input placeholder="email" name="email" type="text"/>
+                <input type="submit" value="submit"/>
             </form>
         </div>
     </div>
