--- a/templates/succes.html
+++ b/templates/succes.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <H5>The email as been send click on the button to return on the main page</H5>
-        <a href="/templates/home.html"><button>home</button></a>
+        <a href="/"><button>home</button></a>
     </div>    
 </body>
 
