--- a/templates/home.html
+++ b/templates/home.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="container">
-        <H2>
+        <H2 class="text">
             Bienvenue a toi jeune entrepreneurs
         </H2>
         <div class="subbar">
             <form action="/submit" method="POST">
-                <input placeholder="email" name="email" type="text"/>
-                <input type="submit" value="submit"/>
+                <input class="email" placeholder="email" name="email" type="text"/>
+                <input class="submit" type="submit" value="submit"/>
             </form>
         </div>
     </div>
