--- a/templates/succes.html
+++ b/templates/succes.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <H5>The email as been send click on the button to return on the main page</H5>
-        <a href="/"><button>home</button></a>
+        <H5 class="text">The email as been send click on the button to return on the main page</H5>
+        <a href="/"><button class="submit">home</button></a>
     </div>    
 </body>
 
