--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,27 @@
+body{
+    background-color: black;
+}
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid;
+    border-radius: 4rem;
+    padding: 2rem;
+    background-color: crimson;
+}
+.text{
+    color: white;
+}
+
+.email{
+    border: 1px solid;
+    border-radius: 0.5rem;
+}
+
+.submit{
+    color: white;
+    background-color: black;
+    border-radius: 0.7rem;
+    font-family: sans-serif;
 }
